--- a/SupplierRanking/Views/Home/Index.cshtml
+++ b/SupplierRanking/Views/Home/Index.cshtml
@@ -18,7 +18,8 @@
             </div>
         </div>
     </div>
-    <div class="slider-item" style="background-image: url('/Content/images/bg_2.jpg');">
+    <div class="slider-item" 
+         style="background-image: url('/Content/images/bg_2.jpg');">
         <div class="overlay"></div>
         <div class="container">
             <div class="row slider-text align-items-center">
@@ -84,37 +85,61 @@
         <div class="row">
             <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
                 <div class="media block-6 services p-3 py-4 d-block text-center">
-                    <div class="icon mb-3"><span class="flaticon-maintenance"></span></div>
+                    <div class="icon mb-3">
+                        <span class="flaticon-maintenance"></span>
+                    </div>
                     <div class="media-body">
-                        <h3 class="heading">Construction Management</h3>
-                        <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                        <h3 class="heading">
+                            Construction Management
+                        </h3>
+                        <p>
+                            Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.
+                        </p>
                     </div>
                 </div>
             </div>
             <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
                 <div class="media block-6 services p-3 py-4 d-block text-center">
-                    <div class="icon mb-3"><span class="flaticon-construction"></span></div>
+                    <div class="icon mb-3">
+                        <span class="flaticon-construction"></span>
+                    </div>
                     <div class="media-body">
-                        <h3 class="heading">Pre-Construction Services</h3>
-                        <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                        <h3 class="heading">
+                            Pre-Construction Services
+                        </h3>
+                        <p>
+                            Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.
+                        </p>
                     </div>
                 </div>
             </div>
             <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
                 <div class="media block-6 services p-3 py-4 d-block text-center">
-                    <div class="icon mb-3"><span class="flaticon-conveyor"></span></div>
+                    <div class="icon mb-3">
+                        <span class="flaticon-conveyor"></span>
+                    </div>
                     <div class="media-body">
-                        <h3 class="heading">Construction Services</h3>
-                        <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                        <h3 class="heading">
+                            Construction Services
+                        </h3>
+                        <p>
+                            Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.
+                        </p>
                     </div>
                 </div>
             </div>
             <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
                 <div class="media block-6 services p-3 py-4 d-block text-center">
-                    <div class="icon mb-3"><span class="flaticon-engineer"></span></div>
+                    <div class="icon mb-3">
+                        <span class="flaticon-engineer"></span>
+                    </div>
                     <div class="media-body">
-                        <h3 class="heading">General Constructing</h3>
-                        <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                        <h3 class="heading">
+                            General Constructing
+                        </h3>
+                        <p>
+                            Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -133,7 +158,9 @@
         </div>
         <div class="row">
             <div class="col-md-6 ftco-animate">
-                <a href="/Content/images/image_1.jpg" class="project project-img d-flex justify-content-center image-popup" style="background-image: url(/Content/images/image_1.jpg);">
+                <a class="project project-img d-flex justify-content-center image-popup" 
+                   href="/Content/images/image_1.jpg" 
+                   style="background-image: url(/Content/images/image_1.jpg);">
                     <div class="align-self-center icon">
                         <span class="ion-ios-search"></span>
                     </div>
@@ -142,14 +169,18 @@
             <div class="col-md-6">
                 <div class="row">
                     <div class="col-sm-12 ftco-animate">
-                        <a href="/Content/images/image_2.jpg" class="project project-img project-img-2 d-flex justify-content-center image-popup" style="background-image: url(/Content/images/image_2.jpg);">
+                        <a class="project project-img project-img-2 d-flex justify-content-center image-popup" 
+                           href="/Content/images/image_2.jpg" 
+                           style="background-image: url(/Content/images/image_2.jpg);">
                             <div class="align-self-center icon">
                                 <span class="ion-ios-search"></span>
                             </div>
                         </a>
                     </div>
                     <div class="col-sm-12 ftco-animate">
-                        <a href="/Content/images/image_3.jpg" class="project project-img project-img-2 d-flex justify-content-center image-popup" style="background-image: url(/Content/images/image_3.jpg);">
+                        <a class="project project-img project-img-2 d-flex justify-content-center image-popup" 
+                           href="/Content/images/image_3.jpg" 
+                           style="background-image: url(/Content/images/image_3.jpg);">
                             <div class="align-self-center icon">
                                 <span class="ion-ios-search"></span>
                             </div>
@@ -163,59 +194,85 @@
 <!-- FIM - Fornecedores -->
 
 <!-- INÍCIO - Experimente Agora -->
-<section class="ftco-section cover_1" style="background-image: url(/Content/images/bg_3.jpg);" data-stellar-background-ratio="0.5">
-    <div class="overlay"></div>
-    <div class="container">
-        <div class="row text-center justify-content-center">
-            <div class="col-md-8 ftco-animate">
-                <h2 class="heading">Experimente Agora</h2>
-                <p class="sub-heading mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi unde impedit, necessitatibus, soluta sit quam minima expedita atque corrupti reiciendis.</p>
-                <p><a href="#" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modalRequest">Request a Quote</a></p>
+<section class="ftco-section cover_1" 
+        style="background-image: url(/Content/images/bg_3.jpg);" 
+         data-stellar-background-ratio="0.5">
+        <div class="overlay"></div>
+        <div class="container">
+            <div class="row text-center justify-content-center">
+                <div class="col-md-8 ftco-animate">
+                    <h2 class="heading">
+                        Experimente Agora
+                    </h2>
+                    <p class="sub-heading mb-5">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi unde impedit, necessitatibus, soluta sit quam minima expedita atque corrupti reiciendis.
+                    </p>
+                    <p>
+                        <a class="btn btn-primary btn-lg" 
+                           data-toggle="modal" 
+                           data-target="#modalRequest" 
+                           href="#" >
+                            Request a Quote
+                        </a>
+                    </p>
+                </div>
             </div>
         </div>
-    </div>
 </section>
 <!-- FIM - Experimente Agora -->
 
 <!-- INÍCIO - Planos -->
 <section class="ftco-section bg-light">
     <div class="container">
-        <div class="row justify-content-center mb-5 pb-5">
-            <div class="col-md-7 text-center heading-section ftco-animate">
-                <h2>Planos</h2>
-            </div>
-        </div>
         <div class="row">
-            <div class="col-md-4 mb-3 text-center ftco-animate">
+
+            <!-- INÍCIO - Plano Free -->
+            <div class="col-md-4 text-center ftco-animate">
                 <div class="pricing p-4 py-5">
-                    <div class="icon mb-2"><span class="flaticon-skyline"></span></div>
-                    <h3 class="mb-3">Basic Plan</h3>
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="price mb-4 py-3"><span class="mr-2 currency">$29</span> <span class="per">per month</span></p>
-                    <p><a href="#" class="btn btn-primary">Get started</a></p>
-                    <a href="#">Open Source</a>
+                    <div class="icon mb-2">
+                        <img style="width:100px; heigth:100px;" src="~/Content/images/plano.png" />
+                    </div>
+                    <h3 class="mb-3">Free</h3>
+                    <p class="mb-4">
+                        Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
+                    </p>
+                    <p class="price mb-4 py-3">
+                        <span class="mr-2 currency"> R$0,00 </span>
+                        <span class="per"> por mês </span>
+                    </p>
+                    <p>
+                        <a href="#" class="btn btn-primary price-free">
+                            Iniciar gratuitamente
+                        </a>
+                    </p>
                 </div>
             </div>
-            <div class="col-md-4 mb-3 text-center ftco-animate">
+            <!-- FIM - Plano Free -->
+            <!-- INÍCIO - Plano Premium -->
+            <div class="col-md-4 text-center ftco-animate">
                 <div class="pricing p-4 py-5">
-                    <div class="icon mb-2"><span class="flaticon-skyline"></span></div>
-                    <h3 class="mb-3">Standard Plan</h3>
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="price mb-4 py-3"><span class="mr-2 currency">$29</span> <span class="per">per month</span></p>
-                    <p><a href="#" class="btn btn-primary">Get started</a></p>
-                    <a href="#">Free 30 Day Trial</a>
+                    <div class="icon mb-2">
+                        <img style="width:100px; heigth:100px;" src="~/Content/images/give-money.png" />
+                    </div>
+                    <h3 class="mb-3">Premium</h3>
+                    <p class="mb-4">
+                        Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
+                    </p>
+                    <p class="price mb-4 py-3">
+                        <span class="mr-2 currency"> R$29,90 </span>
+                        <span class="per"> por mês </span>
+                    </p>
+                    <p>
+                        <a href="#" class="btn btn-primary">
+                            Assinar
+                        </a>
+                    </p>
+                    <a href="#">
+                        Faça o teste por 30 dias!
+                    </a>
                 </div>
             </div>
-            <div class="col-md-4 mb-3 text-center ftco-animate">
-                <div class="pricing p-4 py-5">
-                    <div class="icon mb-2"><span class="flaticon-skyline"></span></div>
-                    <h3 class="mb-3">Premium Plan</h3>
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="price mb-4 py-3"><span class="mr-2 currency">$29</span> <span class="per">per month</span></p>
-                    <p><a href="#" class="btn btn-primary">Get started</a></p>
-                    <a href="#" data-toggle="modal" data-target="#modalRequest">Request a Quote</a>
-                </div>
-            </div>
+            <!-- FIM - Plano Premium -->
         </div>
     </div>
 </section>
