--- a/SupplierRanking/Views/Shared/LoginLayout.cshtml
+++ b/SupplierRanking/Views/Shared/LoginLayout.cshtml
@@ -23,6 +23,9 @@
         <link href="~/Content/css/main.css" rel="stylesheet" />
         <link href="~/Content/css/util.css" rel="stylesheet" />
         <!-- FIM - Nossos CSS -->
+
+        <!-- Logo da Aba -->
+        <link rel="icon" href="~/Content/images/payment.png" type="image/x-icon" />
     </head>
     <body>
         <div class="limiter">
