--- a/SupplierRanking/Views/Shared/_Layout.cshtml
+++ b/SupplierRanking/Views/Shared/_Layout.cshtml
@@ -23,8 +23,8 @@
 
         <link rel="stylesheet" type="text/css" href="~/Content/css/style.css">
         
-        <!-- Icone - PLANOS -->
-         <link rel="icon" href="~/Views/conteudo/images/payment.png type="image/x-icon"" />
+        <!-- Logo da Aba -->
+         <link rel="icon" href="~/Content/images/payment.png" type="image/x-icon" />
     </head>
 
     <body>
@@ -33,7 +33,9 @@
              class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light"
              data-aos="fade-down" data-aos-delay="500">
             <div class="container">
-                <a class="navbar-brand" href="index.html">Supplier Ranking</a>
+                <a class="navbar-brand" href="/Home/Index">
+                    Supplier Ranking
+                </a>
 
                 <!-- INÍCIO - Menu Hamburguer -->
                 <button class="navbar-toggler"
@@ -43,7 +45,7 @@
                         aria-controls="ftco-nav"
                         aria-expanded="false"
                         aria-label="Toggle navigation">
-                    <span class="oi oi-menu"></span> Menu
+                        <span class="oi oi-menu"></span> Menu
                 </button>
                 <!-- FIM - Menu Hamburguer -->
 
@@ -51,27 +53,27 @@
                      class="collapse navbar-collapse">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="~/Views/Home/Index.cshtml">
+                            <a class="nav-link" href="/Home/Index">
                                 Home
                             </a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="~/Views/Home/SobreNos.cshtml">
+                            <a class="nav-link" href="/Home/SobreNos">
                                 Sobre Nós
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="~/Views/Home/Planos.cshtml">
+                            <a class="nav-link" href="/Home/Planos">
                                 Planos
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="~/Views/Home/Contato.cshtml">
+                            <a class="nav-link" href="/Home/Contato">
                                 Contato
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="~/Views/Home/LoginFornecedorComprador.cshtml">
+                            <a class="nav-link" href="/Login/Login">
                                 Acessar
                             </a>
                         </li>
@@ -89,102 +91,81 @@
         
         <!-- INÍCIO - RODAPÉ -->
       
-            <footer class="ftco-footer ftco-bg-dark ftco-section">
-
-                <div class="container">
-                    
-
-                        <div class="row mb-5">
-                            <div class="col-md">
-                                <div class="ftco-footer-widget mb-4">
-
-                                    <h2 class="ftco-heading-2">Suplier Ranking</h2>
-                                    <p>
-                                        O Website feito para você que é fornecedor ou comprador
-                                        de mercadorias para sua empresa.
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="col-md">
-                                <div class="ftco-footer-widget mb-4">
-                                    <h2 class="ftco-heading-2">Páginas</h2>
-                                    <ul class="list-unstyled">
-                                        <li><a href="#" class="py-2 d-block">Sobre nós</a></li>
-                                        <li><a href="#" class="py-2 d-block">Planos</a></li>
-                                        <li><a href="#" class="py-2 d-block">Contato</a></li>
-                                        <li><a href="#" class="py-2 d-block">Acesso</a></li>
-                                    </ul>
-
-                                </div>
-                            </div>
-                            <div class="col-md">
-                                <div class="ftco-footer-widget mb-4">
-                                    <h2 class="ftco-heading-2">Entre em contato por: </h2>
-                                    <ul class="list-unstyled">
-                                        <li><a href="#" class="py-2 d-block">Av. da Saudade , Campinas - SP</a></li>
-                                        <li><a href="#" class="py-2 d-block">+55 (19)97788-2233</a></li>
-                                        <li><a href="#" class="py-2 d-block">suportesuplierranking@hotmail.com</a></li>
-
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="col-md">
-                                <div class="ftco-footer-widget mb-4">
-                                    <ul class="ftco-footer-social list-unstyled float-md-right float-lft">
-                                        <li class="ftco-animate"><a href="#"><span  class="icon-twitter"></span></a></li>
-                                        <li class="ftco-animate"><a href="#"><span style="margin-left:-76px;margin-top:164px" class="icon-facebook"></span></a></li>
-                                        <li class="ftco-animate"><a href="#"><span  class="icon-instagram"></span></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-
-
+        <footer class="ftco-footer ftco-bg-dark ftco-section">
+            <div class="container">
+                <div class="row mb-5">
+                    <div class="col-md">
+                        <div class="ftco-footer-widget mb-4">
+                            <h2 class="ftco-heading-2">Suplier Ranking</h2>
+                            <p>
+                                O Website feito para você que é fornecedor ou comprador
+                                de mercadorias para sua empresa.
+                            </p>
                         </div>
-
-
                     </div>
+                    <div class="col-md">
+                        <div class="ftco-footer-widget mb-4">
+                            <h2 class="ftco-heading-2">Páginas</h2>
+                            <ul class="list-unstyled">
+                                <li><a href="#" class="py-2 d-block">Sobre nós</a></li>
+                                <li><a href="#" class="py-2 d-block">Planos</a></li>
+                                <li><a href="#" class="py-2 d-block">Contato</a></li>
+                                <li><a href="#" class="py-2 d-block">Acesso</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md">
+                        <div class="ftco-footer-widget mb-4">
+                            <h2 class="ftco-heading-2">Entre em contato por: </h2>
+                            <ul class="list-unstyled">
+                                <li><a href="#" class="py-2 d-block">Av. da Saudade , Campinas - SP</a></li>
+                                <li><a href="#" class="py-2 d-block">+55 (19)97788-2233</a></li>
+                                <li><a href="#" class="py-2 d-block">suportesuplierranking@hotmail.com</a></li>
 
-
-
-
-                </div>
-
-                <div style="marging-left:-1000px" class="row">
-                    <div class="col-md-12 text-center">
-                        <p>
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            Copyright &copy;
-                            <script>document.write(new Date().getFullYear());</script> All rights reserved | This site was made by <i class="icon-compass" aria-hidden="true">
-                            </i> by <a href="https://colorlib.com" target="_blank">Suplier Ranking</a>
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        </p>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md">
+                        <div class="ftco-footer-widget mb-4">
+                            <ul class="ftco-footer-social list-unstyled float-md-right float-lft">
+                                <li class="ftco-animate"><a href="#"><span  class="icon-twitter"></span></a></li>
+                                <li class="ftco-animate"><a href="#"><span style="margin-left:-76px;margin-top:164px" class="icon-facebook"></span></a></li>
+                                <li class="ftco-animate"><a href="#"><span  class="icon-instagram"></span></a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-               
+            </div>
+            <div class="row"
+                 style="marging-left:-1000px">
+                <div class="col-md-12 text-center">
+                    <p>
+                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                        Copyright &copy;
+                        <script>document.write(new Date().getFullYear());</script> All rights reserved | This site was made by <i class="icon-compass" aria-hidden="true">
+                        </i> by <a href="https://colorlib.com" target="_blank">Suplier Ranking</a>
+                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                    </p>
+                </div>
+            </div>            
+        </footer>
+        <!-- FIM - RODAPÉ -->
 
-                    
-                    
-                    
-                    
-                    
-            </footer>
-            <!-- FIM - RODAPÉ -->
-
-            <script src="~/Content/config/js/jquery.min.js"></script>
-            <script src="~/Content/config/js/jquery-migrate-3.0.1.min.js"></script>
-            <script src="~/Content/config/js/popper.min.js"></script>
-            <script src="~/Content/config/js/bootstrap.min.js"></script>
-            <script src="~/Content/config/js/jquery.easing.1.3.js"></script>
-            <script src="~/Content/config/js/jquery.waypoints.min.js"></script>
-            <script src="~/Content/config/js/jquery.stellar.min.js"></script>
-            <script src="~/Content/config/js/owl.carousel.min.js"></script>
-            <script src="~/Content/config/js/jquery.magnific-popup.min.js"></script>
-            <script src="~/Content/config/js/aos.js"></script>
-            <script src="~/Content/config/js/jquery.animateNumber.min.js"></script>
-            <script src="~/Content/config/js/bootstrap-datepicker.js"></script>
-            <script src="~/Content/config/js/jquery.timepicker.min.js"></script>
-            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-            <script src="~/Content/config/js/google-map.js"></script>
-            <script src="~/Content/config/js/main.js"></script>
-</body>
+        <script src="~/Content/config/js/jquery.min.js"></script>
+        <script src="~/Content/config/js/jquery-migrate-3.0.1.min.js"></script>
+        <script src="~/Content/config/js/popper.min.js"></script>
+        <script src="~/Content/config/js/bootstrap.min.js"></script>
+        <script src="~/Content/config/js/jquery.easing.1.3.js"></script>
+        <script src="~/Content/config/js/jquery.waypoints.min.js"></script>
+        <script src="~/Content/config/js/jquery.stellar.min.js"></script>
+        <script src="~/Content/config/js/owl.carousel.min.js"></script>
+        <script src="~/Content/config/js/jquery.magnific-popup.min.js"></script>
+        <script src="~/Content/config/js/aos.js"></script>
+        <script src="~/Content/config/js/jquery.animateNumber.min.js"></script>
+        <script src="~/Content/config/js/bootstrap-datepicker.js"></script>
+        <script src="~/Content/config/js/jquery.timepicker.min.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+        <script src="~/Content/config/js/google-map.js"></script>
+        <script src="~/Content/config/js/main.js"></script>
+    </body>
 </html>
