--- a/SupplierRanking/Content/css/main.css
+++ b/SupplierRanking/Content/css/main.css
@@ -137,14 +137,14 @@ iframe {
   font-family: Poppins-Regular;
   font-size: 13px;
   line-height: 1.5;
-  color: #999999;
+  color: #fff;
 }
 
 .txt2 {
   font-family: Poppins-Regular;
   font-size: 13px;
   line-height: 1.5;
-  color: #666666;
+  color: #fff;
 }
 
 
@@ -172,12 +172,13 @@ iframe {
   background: -webkit-linear-gradient(-135deg, #c850c0, #4158d0);
   background: -o-linear-gradient(-135deg, #c850c0, #4158d0);
   background: -moz-linear-gradient(-135deg, #c850c0, #4158d0);
-  background: linear-gradient(-135deg, #c850c0, #4158d0);
+  background: linear-gradient(-135deg, #0e81b6, #222426);
 }
 
 .wrap-login100 {
   width: 960px;
-  background: #fff;
+  height: 1000px;
+  background: #0000004d;
   border-radius: 10px;
   overflow: hidden;
 
@@ -195,6 +196,7 @@ iframe {
 [  ]*/
 .login100-pic {
   width: 316px;
+  height: 316px;
 }
 
 .login100-pic img {
@@ -206,12 +208,16 @@ iframe {
 [  ]*/
 .login100-form {
   width: 290px;
+  width: 310px;
+  margin-top: 300px;
+  margin-right: 108px;
+
 }
 
 .login100-form-title {
   font-family: Poppins-Bold;
   font-size: 24px;
-  color: #333333;
+  color: #f9f9f9;
   line-height: 1.2;
   text-align: center;
 
@@ -220,7 +226,10 @@ iframe {
   padding-bottom: 54px;
 }
 
-
+/*.container-login100-form-btn{
+    margin-top: 300px;
+    margin-left: -150px;
+}*/
 /*---------------------------------------------*/
 .wrap-input100 {
   position: relative;
