--- a/SupplierRanking/Views/Login/Login.cshtml
+++ b/SupplierRanking/Views/Login/Login.cshtml
@@ -3,12 +3,12 @@
      Layout = "~/Views/Shared/LoginLayout.cshtml";
 }
 
-<div class="limiter">
-    <div class="container-login100">
+
+    @*<div class="container-login100">
         <div class="wrap-login100">
             <div class="login100-pic js-tilt" data-tilt>
 
-                <img style="width:300px;heigth:300px;"src="~/Content/images/logo2.png" alt="IMG" />
+                
             </div>
 
             <form class="login100-form validate-form">
@@ -55,6 +55,6 @@
                 </div>
             </form>
         </div>
-    </div>
-</div>
+    </div>*@
+
    
