--- a/SupplierRanking/Views/Shared/LoginLayout.cshtml
+++ b/SupplierRanking/Views/Shared/LoginLayout.cshtml
@@ -28,12 +28,12 @@
         <div class="limiter">
             <div class="container-login100">
                 <div class="wrap-login100">
-                    <div class="login100-pic js-tilt" data-tilt></div>
-
+                    <div class="login100-pic js-tilt" data-tilt>
+                        <img style="width:300px;heigth:300px;" src="~/Content/images/logo2.png" alt="IMG" />
+                    </div>
+                   @*<h1>Login</h1>*@
                     <form class="login100-form validate-form">
-                        <span class="login100-form-title">
-                            Member Login
-                        </span>
+                        
 
                         <div class="wrap-input100 validate-input" 
                              data-validate="Valid email is required: ex@abc.xyz">
@@ -46,7 +46,7 @@
 
                         <div class="wrap-input100 validate-input" 
                              data-validate="Password is required">
-                            <input class="input100" type="password" name="pass" placeholder="Password">
+                            <input class="input100" type="password" name="pass" placeholder="Senha">
                             <span class="focus-input100"></span>
                             <span class="symbol-input100">
                                 <i class="fa fa-lock" aria-hidden="true"></i>
@@ -61,16 +61,16 @@
 
                         <div class="text-center p-t-12">
                             <span class="txt1">
-                                Forgot
+                                Esqueceu
                             </span>
                             <a class="txt2" href="#">
-                                Username / Password?
+                                Usuário / Senha ?
                             </a>
                         </div>
 
                         <div class="text-center p-t-136">
                             <a class="txt2" href="#">
-                                Create your Account
+                                Criar conta
                                 <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
                             </a>
                         </div>
