--- a/SupplierRanking/Views/Shared/LoginLayout.cshtml
+++ b/SupplierRanking/Views/Shared/LoginLayout.cshtml
@@ -23,31 +23,43 @@
         <link href="~/Content/css/main.css" rel="stylesheet" />
         <link href="~/Content/css/util.css" rel="stylesheet" />
         <!-- FIM - Nossos CSS -->
-
+        
         <!-- Logo da Aba -->
         <link rel="icon" href="~/Content/images/payment.png" type="image/x-icon" />
     </head>
     <body>
         <div class="limiter">
-            <div class="container-login100">
-                <div class="wrap-login100">
+            @*<div class="container-login100">
+               
+                
+                 <div class="wrap-login100">
+                    
+                    
+                   
                     <div class="login100-pic js-tilt" data-tilt>
-                        <img style="width:300px;heigth:300px;" src="~/Content/images/logo2.png" alt="IMG" />
+                        <img style="width:80px;heigth:80px;" src="~/Content/images/comprador.png" IMG" />
                     </div>
-                   @*<h1>Login</h1>*@
-                    <form class="login100-form validate-form">
-                        
+                     <label class="switch">
+                         <input type="checkbox" checked>
+                         <span class="slider round"></span>
+                     </label>
+                     <div class="login100-pic js-tilt" data-tilt>
+                         <img style="width:80px;heigth:80px;" src="~/Content/images/Login.png" IMG" />
+                     </div>
 
-                        <div class="wrap-input100 validate-input" 
+                    <form class="login100-form validate-form">
+                        <h1 id="txtlogin">Login</h1>
+
+                        <div class="wrap-input100 validate-input"
                              data-validate="Valid email is required: ex@abc.xyz">
-                            <input class="input100" type="text" name="email" placeholder="Email">
+                            <input class="input100" type="text" name="email" placeholder="CNPJ">
                             <span class="focus-input100"></span>
                             <span class="symbol-input100">
                                 <i class="fa fa-envelope" aria-hidden="true"></i>
                             </span>
                         </div>
 
-                        <div class="wrap-input100 validate-input" 
+                        <div class="wrap-input100 validate-input"
                              data-validate="Password is required">
                             <input class="input100" type="password" name="pass" placeholder="Senha">
                             <span class="focus-input100"></span>
@@ -79,7 +91,7 @@
                         </div>
                     </form>
                 </div>
-            </div>
+            </div>*@
         </div>
 
         <!-- INÍCIO - Conteúdo -->
