--- a/SupplierRanking/Views/Login/Login.cshtml
+++ b/SupplierRanking/Views/Login/Login.cshtml
@@ -3,58 +3,109 @@
      Layout = "~/Views/Shared/LoginLayout.cshtml";
 }
 
+<script>
+    //document.addEventListener('DOMContentLoaded', function () {
+    //    var checkbox = document.querySelector('input[type="checkbox"]');
 
-    @*<div class="container-login100">
-        <div class="wrap-login100">
-            <div class="login100-pic js-tilt" data-tilt>
+    //    checkbox.addEventListener('change', function () {
+    //        if (checkbox.checked) {
+    //            // do this
+    //            console.log('Checked');
+    //        } else {
+    //            // do that
+    //            alert('Not checked');
+    //        }
+    //    });
+    //});
 
-                
+
+    //função para checarse o botao ta ativado ou não
+    function checkLogin() {
+        var checkbox = document.getElementById('swtichFornecedor');
+
+        if (checkbox.checked == true) {
+            alert('teste');
+        } else {
+            text.style.display = "block";
+        }
+       
+     
+            
+    }
+
+
+
+</script>
+
+<div class="container-login100">
+
+
+    <div class="wrap-login100">
+
+
+
+        <div class="login100-pic js-tilt" data-tilt>
+            <img style="width:80px;heigth:80px;" src="~/Content/images/comprador.png" IMG" />
+            <h1 style="color:white;font-size:13px;">Comprador</h1>
+        </div>
+        <label id="labelCheck" class="switch">
+            <input id="swtichFornecedor" type="checkbox" checked>
+            <span class="slider round"></span>
+        </label>
+
+
+
+
+        <div class="login100-pic js-tilt" data-tilt>
+         
+               <img style="width:80px;heigth:80px;" src="~/Content/images/Login.png" IMG" />
+            <h1 style="color:white;font-size:13px;">Fornecedor</h1>
+        </div>
+
+        <form class="login100-form validate-form">
+            <h1 id="txtlogin">Login</h1>
+
+            <div class="wrap-input100 validate-input"
+                 data-validate="Valid email is required: ex@abc.xyz">
+                <input class="input100" type="text" name="email" placeholder="CNPJ">
+                <span class="focus-input100"></span>
+                <span class="symbol-input100">
+                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                </span>
             </div>
 
-            <form class="login100-form validate-form">
-                <span class="login100-form-title">
-                    Login
+            <div class="wrap-input100 validate-input"
+                 data-validate="Password is required">
+                <input class="input100" type="password" name="pass" placeholder="Senha">
+                <span class="focus-input100"></span>
+                <span class="symbol-input100">
+                    <i class="fa fa-lock" aria-hidden="true"></i>
                 </span>
+            </div>
 
-                <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-                    <input class="input100" type="text" name="email" placeholder="Email">
-                    <span class="focus-input100"></span>
-                    <span class="symbol-input100">
-                        <i class="fa fa-envelope" aria-hidden="true"></i>
-                    </span>
-                </div>
+            <div class="container-login100-form-btn">
+                <button class="login100-form-btn">
+                    Login
+                </button>
+            </div>
 
-                <div class="wrap-input100 validate-input" data-validate="Password is required">
-                    <input class="input100" type="password" name="pass" placeholder="Password">
-                    <span class="focus-input100"></span>
-                    <span class="symbol-input100">
-                        <i class="fa fa-lock" aria-hidden="true"></i>
-                    </span>
-                </div>
+            <div class="text-center p-t-12">
+                <span class="txt1">
+                    Esqueceu
+                </span>
+                <a class="txt2" href="#">
+                    Usuário / Senha ?
+                </a>
+            </div>
 
-                <div class="container-login100-form-btn">
-                    <button class="login100-form-btn">
-                        Login
-                    </button>
-                </div>
-
-                <div class="text-center p-t-12">
-                    <span class="txt1">
-                        Esqueceu
-                    </span>
-                    <a class="txt2" href="#">
-                        Usuário / se?
-                    </a>
-                </div>
-
-                <div class="text-center p-t-136">
-                    <a class="txt2" href="#">
-                        Create your Account
-                        <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
-                    </a>
-                </div>
-            </form>
-        </div>
-    </div>*@
+            <div class="text-center p-t-136">
+                <a class="txt2" href="#">
+                    Criar conta
+                    <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
+                </a>
+            </div>
+        </form>
+    </div>
+</div>
 
    
