--- a/SupplierRanking/Views/Home/Index.cshtml
+++ b/SupplierRanking/Views/Home/Index.cshtml
@@ -34,7 +34,7 @@
 <!-- FIM - Carossel -->
 
 <!-- INÍCIO - Contador -->
-<section class="ftco-counter" id="section-counter">
+@*<section class="ftco-counter" id="section-counter">
     <div class="container bg-light">
         <div class="row">
             <div class="col-md-6 col-lg-3 d-flex justify-content-center counter-wrap ftco-animate">
@@ -71,7 +71,7 @@
             </div>
         </div>
     </div>
-</section>
+</section>*@
 <!-- FIM - Contador -->
 
 <!-- INÍCIO - Objetivos -->
@@ -148,11 +148,56 @@
 </section>
 <!-- FIM - Objetivos -->
 
+<!-- INÍCIO - Perfil -->
+<section class="ftco-section">
+    <div class="container">
+        <div class="row justify-content-center mb-5 pb-5">
+            <div class="col-md-7 text-center heading-section ftco-animate">
+                <h2>Qual é o seu perfil?</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 d-flex align-self-stretch ftco-animate">
+                <div class="media block-6 services p-3 py-4 d-block text-center">
+                    <div class="icon mb-3">
+                        <span class="flaticon-maintenance"></span>
+                    </div>
+                    <div class="media-body">
+                        <h3 class="heading">
+                            Comprador
+                        </h3>
+                        <p>
+                            Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="divider ftco-animate"></div>
+            <div class="col-md-6 d-flex align-self-stretch ftco-animate">
+                <div class="media block-6 services p-3 py-4 d-block text-center">
+                    <div class="icon mb-3">
+                        <span class="flaticon-construction"></span>
+                    </div>
+                    <div class="media-body">
+                        <h3 class="heading">
+                            Fornecedor
+                        </h3>
+                        <p>
+                            Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- FIM - Perfil -->
+
 <!-- INÍCIO - Fornecedores -->
 <section class="ftco-section bg-light">
     <div class="container">
         <div class="row justify-content-center mb-5 pb-5 ftco-animate">
-            <div class="col-md-7 text-center heading-section">
+            <div class="col-md-8 text-center heading-section">
                 <h2>Alguns dos nossos melhores Fornecedores...</h2>
             </div>
         </div>
@@ -224,8 +269,12 @@
 <!-- INÍCIO - Planos -->
 <section class="ftco-section bg-light">
     <div class="container">
+        <div class="row justify-content-center mb-5 pb-5 ftco-animate">
+            <div class="col-md-7 text-center heading-section">
+                <h2>Planos</h2>
+            </div>
+        </div>
         <div class="row">
-
             <!-- INÍCIO - Plano Free -->
             <div class="col-md-4 text-center ftco-animate">
                 <div class="pricing p-4 py-5">
@@ -242,7 +291,7 @@
                     </p>
                     <p>
                         <a href="#" class="btn btn-primary price-free">
-                            Iniciar gratuitamente
+                            Assinar
                         </a>
                     </p>
                 </div>
