--- a/SupplierRanking/Views/Shared/_Layout.cshtml
+++ b/SupplierRanking/Views/Shared/_Layout.cshtml
@@ -90,54 +90,46 @@
         <!-- FIM - CONTEÚDO -->
         
         <!-- INÍCIO - RODAPÉ -->
-      
-        <footer class="ftco-footer ftco-bg-dark ftco-section">
+        <footer class="ftco-footer ftco-section">
             <div class="container">
-                <div class="row mb-5">
-                    <div class="col-md">
+                <div class="row mb-2">
+                    <div class="col-md-5">
                         <div class="ftco-footer-widget mb-4">
-                            <h2 class="ftco-heading-2">Suplier Ranking</h2>
-                            <p>
-                                O Website feito para você que é fornecedor ou comprador
-                                de mercadorias para sua empresa.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-md">
-                        <div class="ftco-footer-widget mb-4">
-                            <h2 class="ftco-heading-2">Páginas</h2>
+                            <h2 class="ftco-heading-2">Informações de Contato:</h2>
                             <ul class="list-unstyled">
-                                <li><a href="#" class="py-2 d-block">Sobre nós</a></li>
-                                <li><a href="#" class="py-2 d-block">Planos</a></li>
-                                <li><a href="#" class="py-2 d-block">Contato</a></li>
-                                <li><a href="#" class="py-2 d-block">Acesso</a></li>
+                                <li>
+                                    <a class="py-2 d-block"
+                                        href="">
+                                        Av. da Saudade, 125 - Ponte Preta, Campinas - SP
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="py-2 d-block"
+                                        href="">
+                                        (19) 3231-2540
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="py-2 d-block"
+                                        href="mailto:suportesupplierranking@hotmail.com">
+                                        suportesupplierranking@hotmail.com
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md">
-                        <div class="ftco-footer-widget mb-4">
-                            <h2 class="ftco-heading-2">Entre em contato por: </h2>
-                            <ul class="list-unstyled">
-                                <li><a href="#" class="py-2 d-block">Av. da Saudade , Campinas - SP</a></li>
-                                <li><a href="#" class="py-2 d-block">+55 (19)97788-2233</a></li>
-                                <li><a href="#" class="py-2 d-block">suportesuplierranking@hotmail.com</a></li>
-
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-md">
+                    <div class="col-md-1">
                         <div class="ftco-footer-widget mb-4">
                             <ul class="ftco-footer-social list-unstyled float-md-right float-lft">
-                                <li class="ftco-animate"><a href="#"><span  class="icon-twitter"></span></a></li>
-                                <li class="ftco-animate"><a href="#"><span style="margin-left:-76px;margin-top:164px" class="icon-facebook"></span></a></li>
-                                <li class="ftco-animate"><a href="#"><span  class="icon-instagram"></span></a></li>
+                                <li class="ftco-animate"><a href=""><span class="icon-twitter"></span></a></li>
+                                <li class="ftco-animate"><a href=""><span class="icon-facebook"></span></a></li>
+                                <li class="ftco-animate"><a href=""><span class="icon-instagram"></span></a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row"
-                 style="marging-left:-1000px">
+            <div class="row">
                 <div class="col-md-12 text-center">
                     <p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
