--- a/SupplierRanking/Content/css/footer.css
+++ b/SupplierRanking/Content/css/footer.css
@@ -12,7 +12,7 @@
 }
 
 .ftco-footer .ftco-footer-widget h2 {
-	font-weight: normal;
+	/*font-weight: normal;*/
 	color: #fff;
 }
 
@@ -49,7 +49,7 @@
 	width: 60px;
 	display: block;
 	float: left;
-	background: rgba(0, 0, 0, 0);
+	background-color: rgba(60, 119, 158, 0.5);
 	border-radius: 50%;
 	position: relative;
 }
@@ -73,5 +73,8 @@
     font-family: arial, sans-serif;
     border-collapse: collapse;
     width: 100%;
+}
 
+.ftco-footer .row {
+    align-items: center;
 }
